# Westinghouse-12KW-transfer-switch

./: LICENSE  readme.txt
Kicad schematic/: westinghouse generator controller.kicad_sch
software/: CMakeLists.txt  Program.cpp
